# basic-rag

./: .env.example  README.md  pyproject.toml  rag.py  test_rag_compare.py
